--- a/about/index.html
+++ b/about/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/style.css" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Mr De Haviland">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Indie Flower">
     <title>About us</title>
   </head>
@@ -15,7 +14,7 @@
           <div class="container">
             <div class="navbar-brand">
               <a class="navbar-item">
-                
+                <img src="https://www.six-strings.com.au/img/sixstring.png">
               </a>
             </div>
             <div id="navbarMenuHeroB" class="navbar-menu">
@@ -23,7 +22,9 @@
                 <a href="/" class="navbar-item">
                   HOME
                 </a>
-                
+                <a href="/about" class="navbar-item">
+                  ABOUT
+                </a>
                 <a href="/buy" class="navbar-item">
                   SHOP
                 </a>
@@ -31,14 +32,13 @@
                   CONTACT
                 </a>
                 <a href="https://www.facebook.com" class="navbar-item">
-                  <img src="/img/f_logo_RGB-White_58.png" style="width: 58px; max-height: none; max-width: none;" >
+                  <img src="/img/fb.png" style="width: 58px; max-height: none; max-width: none;" >
                 </a>
               </div>
             </div>
           </div>
         </nav>
       </div>
-
       <article class="page-layout">
 
 <style>
@@ -104,13 +104,11 @@
             <div class="timeline-text">
               <span class="timeline-title">Vine stock</span>
               <br />
-              We source the very best old growth vintage vine stock from the local region.
-              <br />
-              The stock is prepared and given just the right conditions to take root.
+              We sourced the very best shiraz canes from the best kept vineyard in the region. 
             </div>
           </div>
         </td>
-        <td style="border-top:none; border-top-right-radius:0px;>
+        <td style="border-top:none; border-top-right-radius:0px;">
           <div class="timeline-right">
             <img class="content-img" src="/img/about-01.png">
           </div>
@@ -126,11 +124,7 @@
         <td>
           <div class="timeline-right">
             <div class="timeline-text">
-              <span class="timeline-title">Rooted vines</span>
-              <br />
-              After several weeks of careful monitoring our vine stock takes root.
-              <br />
-              The root stock is carefully transferred to our nursery vineyard.
+              Canes are prepared and provided with perfect conditions to take root.
             </div>
           </div>
         </td>
@@ -142,9 +136,7 @@
             <div class="timeline-text">
               <span class="timeline-title">The nursery</span>
               <br />
-              Shhh.. Don't wake the babies.
-              <br />
-
+              After being buried in sand for 3 months, rootlings are carefully transplanted into a purpose built, irrigated nursery for 12 months.
             </div>
           </div>
         </td>
@@ -164,11 +156,7 @@
         <td>
           <div class="timeline-right">
             <div class="timeline-text">
-              <span class="timeline-title">Growth</span>
-              <br />
-              Watch them grow.
-              <br />
-              Keep the weeds (and Kangaroos) away.
+              And leaves start to appear.
             </div>
           </div>
         </td>
@@ -178,11 +166,7 @@
         <td>
           <div class="timeline-left">
             <div class="timeline-text">
-              <span class="timeline-title">Try to stay currant</span>
-              <br />
-
-              <br />
-
+              <span class="timeline-title">In the Vineyard</span>
             </div>
           </div>
         </td>
@@ -202,11 +186,7 @@
         <td>
           <div class="timeline-right">
             <div class="timeline-text">
-              <span class="timeline-title">Grapes</span>
-              <br />
-              Time to start monitoring the sugar levels
-              <br />
-
+              Six Strings currently consists of 3 small blocks of Shiraz vines,
             </div>
           </div>
         </td>
@@ -216,11 +196,7 @@
         <td>
           <div class="timeline-left">
             <div class="timeline-text">
-              <span class="timeline-title">Harvest time</span>
-              <br />
-              Hand pick
-              <br />
-              It's a big job, so we usually need to start before the sun comes up.
+              These have produced the grapes for our first release - 2021 vintage.
             </div>
           </div>
         </td>
@@ -240,11 +216,7 @@
         <td>
           <div class="timeline-right">
             <div class="timeline-text">
-              <span class="timeline-title">Squish those grapes</span>
-              <br />
-              Preferably keep the waste in the press
-              <br />
-
+              Keep an eye out for additional varietals and blends to be released in future vintages.  
             </div>
           </div>
         </td>
@@ -254,11 +226,7 @@
         <td>
           <div class="timeline-left">
             <div class="timeline-text">
-              <span class="timeline-title">Diversity hire</span>
-              <br />
-              We give our more flamboyant friends a job when no-one else will hire them.
-              <br />
-
+            Cover crops are cultivated during winter to increase biodiversity, protect soil, replenish nutrients, and supress weeds.
             </div>
           </div>
         </td>
@@ -278,11 +246,11 @@
         <td>
           <div class="timeline-right">
             <div class="timeline-text">
-              <span class="timeline-title">Free run</span>
+              <span class="timeline-title">Harvest Time</span>
               <br />
-
+                All our grapes are carefully handpicked.
               <br />
-
+                It’s a big job, so we start before the sun comes up.
             </div>
           </div>
         </td>
@@ -292,11 +260,9 @@
         <td>
           <div class="timeline-left">
             <div class="timeline-text">
-              <span class="timeline-title">Fermentation</span>
+              <span class="timeline-title">Our Wine</span>
               <br />
-              Plunge them twice a day
-              <br />
-              Constantly watch the alchohol, sugar and acidity.
+                Wine is made with minimal intervention – plunged in open fermenters,
             </div>
           </div>
         </td>
@@ -316,31 +282,8 @@
         <td>
           <div class="timeline-right">
             <div class="timeline-text">
-              <span class="timeline-title">Roll out the barrel</span>
-              <br />
-
-              <br />
-
+              basket pressed and matured in French Oak barrels.
             </div>
-          </div>
-        </td>
-      </tr>
-
-      <tr>
-        <td>
-          <div class="timeline-left">
-            <div class="timeline-text">
-              <span class="timeline-title">Plonk!</span>
-              <br />
-
-              <br />
-
-            </div>
-          </div>
-        </td>
-        <td style="border-bottom:none; border-bottom-right-radius:0px;">
-          <div class="timeline-right">
-            <img class="content-img" src="/img/about-13.png">
           </div>
         </td>
       </tr>
@@ -349,8 +292,5 @@
   </table>
 </div>
 </article>
-
-      <div class="hero-foot"></div>
-    </section>
   </body>
 </html>
