--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                   CONTACT
                 </a>
                 <a href="https://www.facebook.com" class="navbar-item">
-                  <img src="/img/fb.png" style="width: 58px; max-height: none; max-width: none;" >
+                  <img src="https://www.six-strings.com.au/img/FB.png" style="width: 58px; max-height: none; max-width: none;" >
                 </a>
               </div>
             </div>
