--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <a href="/contact" class="navbar-item">
                   CONTACT
                 </a>
-                <a href="https://www.facebook.com" class="navbar-item">
+                <a href="https://www.facebook.com/sixstringwines" class="navbar-item">
                   <img src="https://www.six-strings.com.au/img/fblogo.png" style="width: 58px; max-height: none; max-width: none;" >
                 </a>
               </div>
