--- a/contact/index.html
+++ b/contact/index.html
@@ -17,7 +17,13 @@
                 <img src="https://www.six-strings.com.au/img/sixstring.png">
               </a>
             </div>
-            <div id="navbarMenuHeroB" class="navbar-menu">
+
+                <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+                      <span aria-hidden="true"></span>
+                      <span aria-hidden="true"></span>
+                      <span aria-hidden="true"></span>
+                </a>              
+            <div id="navbarBasicExample" class="navbar-menu">
               <div class="navbar-end">
                 <a href="/" class="navbar-item">
                   HOME
@@ -34,8 +40,9 @@
                 <a href="https://www.facebook.com/sixstringwines" class="navbar-item">
                   <img src="https://www.six-strings.com.au/img/fblogo.png" style="width: 58px; max-height: none; max-width: none;" >
                 </a>
-              </div>
-            </div>
+
+    </div>
+
           </div>
         </nav>
       </div>
