--- a/contact/index.html
+++ b/contact/index.html
@@ -10,41 +10,59 @@
   <body>
     <section class="hero is-large">
       <div class="hero-head">
-                    <nav class="navbar">
-          <div class="container">
-            <div class="navbar-brand">
-              <a class="navbar-item">
-                <img src="https://www.six-strings.com.au/img/sixstring.png">
-              </a>
-            </div>
-
-                <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
-                      <span aria-hidden="true"></span>
-                      <span aria-hidden="true"></span>
-                      <span aria-hidden="true"></span>
-                </a>              
-            <div id="navbarBasicExample" class="navbar-menu">
-              <div class="navbar-end">
-                <a href="/" class="navbar-item">
-                  HOME
-                </a>
-                <a href="/about" class="navbar-item">
-                  ABOUT
-                </a>
-                <a href="/buy" class="navbar-item">
-                  SHOP
-                </a>
-                <a href="/contact" class="navbar-item">
-                  CONTACT
-                </a>
-                <a href="https://www.facebook.com/sixstringwines" class="navbar-item">
-                  <img src="https://www.six-strings.com.au/img/fblogo.png" style="width: 58px; max-height: none; max-width: none;" >
-                </a>
-
+              <nav class="navbar">
+    <div class="navbar-brand">
+      <a class="navbar-item">
+        <img src="https://www.six-strings.com.au/img/sixstring.png">
+      </a>
+      
+      <div class="navbar-burger burger" data-target="Menu" >
+        <span />
+        <span />
+        <span />
+      </div>            
     </div>
 
-          </div>
-        </nav>
+    <div class="navbar-menu" id="Menu">
+      <div class="navbar-end">
+        <a href="/" class="navbar-item">HOME</a>
+        <a href="/about" class="navbar-item">ABOUT</a>
+        <a href="/buy" class="navbar-item">SHOP</a>
+        <a href="/contact" class="navbar-item">CONTACT</a>
+        <a href="https://www.facebook.com/sixstringwines" class="navbar-item">
+          <img src="https://www.six-strings.com.au/img/fblogo.png" style="width: 58px; max-height: none; max-width: none;" >
+        </a>
+      </div>
+    </div>
+</nav>
+
+<script>
+document.addEventListener('DOMContentLoaded', () => {
+
+  // Get all "navbar-burger" elements
+  const $navbarBurgers = Array.prototype.slice.call(document.querySelectorAll('.navbar-burger'), 0);
+
+  // Check if there are any navbar burgers
+  if ($navbarBurgers.length > 0) {
+
+    // Add a click event on each of them
+    $navbarBurgers.forEach( el => {
+      el.addEventListener('click', () => {
+
+        // Get the target from the "data-target" attribute
+        const target = el.dataset.target;
+        const $target = document.getElementById(target);
+
+        // Toggle the "is-active" class on both the "navbar-burger" and the "navbar-menu"
+        el.classList.toggle('is-active');
+        $target.classList.toggle('is-active');
+
+      });
+    });
+  }
+
+});
+</script>
       </div>
       <article class="page-layout">
   <div class="container">
