--- a/buy/index.html
+++ b/buy/index.html
@@ -66,12 +66,12 @@ document.addEventListener('DOMContentLoaded', () => {
       </div>
       <article class="page-layout">
   <div class="container">
-        <div class="content mt-5">
-          <h1>Shop</h1>
+      <div class="content mt-5">
+        <h1>Shop</h1>
 
-          <div class="columns">
-            <div class="column is-5">
-              <p>SIX STRINGS McLaren Vale Shiraz 2021 Vintage</p>
+        <div class="columns">
+          <div class="column is-5">
+            <p>SIX STRINGS McLaren Vale Shiraz 2021 Vintage</p>
 <table>
 <thead>
 <tr>
@@ -157,16 +157,18 @@ document.addEventListener('DOMContentLoaded', () => {
         padding-right:20px;
     }
 
+    .buy-img {
+        padding-right:20px;        
+    }
+
 </style>
 
-              </div>
-              <div class="column is-offset-1">
-               <img class="content-img" src="/img/shiraz2021.png">
-               </div>
-
-          </div>
             </div>
-            
+            <div class="column is-offset-1">
+              <img class="content-img buy-img" src="/img/shiraz2021.png">
+              </div>
+        </div>
+      </div>
   </div>
 </article>
   </body>
